# Dynamo-quadruped

./: LICENSE  README.md
dynamo_gait/: CMakeLists.txt  package.xml
dynamo_gait/src/: RPY_motion.py  gait.py  kinematics.py
dynamo_kinematics/: CMakeLists.txt  package.xml
dynamo_kinematics/src/: bezire_gait.py  kinematics.py  walk.py  walk_server.py
dynamo_msgs/: CMakeLists.txt  package.xml
dynamo_msgs/action/: Dynamo_motion.action  walk_action.action
dynamo_msgs/msg/: Param.msg
dynamo_perception/: CMakeLists.txt  package.xml
dynamo_skltn/: CMakeLists.txt  package.xml
dynamo_skltn/config/: config.yaml  joint_names_dynamo_skltn.yaml
dynamo_skltn/launch/: display.launch  gazebo.launch  gazebo_control.launch
dynamo_skltn/meshes/: LB1.STL  LB2.STL  LB3.STL  LF1.STL  LF2.STL  LF3.STL  RB1.STL  RB2.STL  RB3.STL  RF1.STL  RF2.STL  RF3.STL  base_link.STL
dynamo_skltn/urdf/: dynamo_skltn.csv  dynamo_skltn.urdf
spot_micro_rviz/config/: config.yaml
spot_micro_rviz/launch/: gazebo.launch  gazebo_control.launch  show_and_move_model_via_gui.launch
spot_micro_rviz/rviz/: spot_micro.rviz
spot_micro_rviz/urdf/: spot_micro.urdf
